--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ajv-keywords": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
