--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "apexcharts": "^3.37.3",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.0.1",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.15",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
