--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^5.3.0",
